# SysOpy

./: CMakeLists.txt
lab01/lib/source/: CMakeLists.txt  main.c  test.c
lab01/lib/static/: CMakeLists.txt  Makefile  addressbook.c  library.c  library.h  main.c
lab01/zad1/: addressbook.c
lab01/zad2/: test.c
moskala-przemyslaw/cw01/zad1/: Makefile  addressbook.c
moskala-przemyslaw/cw01/zad2/: Makefile  main.c
moskala-przemyslaw/cw01/zad3a/: Makefile  addressbook.h  dynamic.c  result.txt
moskala-przemyslaw/cw01/zad3b/: Makefile  result.txt  test.c
moskala-przemyslaw/cw01/zad4/: Makefile  gdb.txt  test.c  test_core
moskala-przemyslaw/cw02/-test/: main.c
moskala-przemyslaw/cw02/tests/: main.c
moskala-przemyslaw/cw02/zad1/: Makefile  fio.c  main.c  test.sh  wyniki.txt
moskala-przemyslaw/cw02/zad2/: Makefile  ls.c  readme.md
moskala-przemyslaw/cw02/zad3/: Makefile  locker.c
moskala-przemyslaw/cw03/zad1/: Makefile  scr  shell.c  test.c
moskala-przemyslaw/cw03/zad2/: Makefile  rude_program.c  scr  sec_shell.c
moskala-przemyslaw/cw04/: readme.md
moskala-przemyslaw/cw04/zad1/: Makefile  catching_signals.c  cmd
moskala-przemyslaw/cw04/zad2/: Makefile  z2test.c  zad2.c
moskala-przemyslaw/cw04/zad3/: Makefile  zad3.c
moskala-przemyslaw/cw05/: help.md  readme.md
moskala-przemyslaw/cw05/zad1/: Makefile  interpreter.c  interpreter.h  test.c  test_interpreter.c  test_interpreter.h
moskala-przemyslaw/cw05/zad2/: Makefile  mandelbrot.c  master.c  master.h  slave.c  slave.h  test.sh
moskala-przemyslaw/cw06/: tips.md
moskala-przemyslaw/cw06/zad1/: client.c  common.h  server.c  server.h  test.c
moskala-przemyslaw/cw06/zad2/: client.c  common.h  pclient.c  pclient.h  pcommon.h  pserver.c  pserver.h  server.c  server.h  test.c
moskala-przemyslaw/cw07/: barber.c  barber.h  clients.c  clients.h  waiting_room.h
moskala-przemyslaw/cw07/zad1/: barber.c  barber.h  clients.c  clients.h  waiting_room.h
moskala-przemyslaw/cw07/zad2/: barber.c  barber.h  clients.c  clients.h  waiting_room.c  waiting_room.h
moskala-przemyslaw/cw08/zad1/: file_creator.c  finder1.c  finder1.h  finder2.c  finder3.c  finderv1.c
moskala-przemyslaw/cw08/zad2/: threads_tester.c  threads_tester.h  zad2.raport
moskala-przemyslaw/cw09/zad1/: reader_writer_posix.c
moskala-przemyslaw/cw09/zad1a/: reader_writer_posix.c  reader_writer_posix.h
moskala-przemyslaw/cw09/zad2a/: reader_writer_mutex.c  reader_writer_mutex.h
tests/lib/source/: CMakeLists.txt  (+1 more)
tests/zad1/: addressbook.c  addressbook.h
(+20 files in other folders)
