cmake_minimum_required(VERSION 3.5)

set(CMAKE_C_STANDARD 99)
#zad4
project(cw04c01)
add_executable(cw04c01 moskala-przemyslaw/cw04/zad1/catching_signals.c)

project(cw04c02)
add_executable(cw04c02 moskala-przemyslaw/cw04/zad2/zad2.c)

project(cw04c03)
add_executable(cw04c03 moskala-przemyslaw/cw04/zad3/zad3.c)
project(cw05z01)
add_executable(cw05z01 moskala-przemyslaw/cw05/zad1/executor.c)
project(cw05z01i)
add_executable(cw05z01i moskala-przemyslaw/cw05/zad1/interface.c)
project(cw05z02master)
add_executable(cw05z02 moskala-przemyslaw/cw05/zad2/src/master.c)
project(cw05z02slave)
add_executable(cw05z02slave moskala-przemyslaw/cw05/zad2/src/slave.c)
target_link_libraries(cw05z02slave m)
project(cw05z02master)
add_executable(cw05z02master moskala-przemyslaw/cw05/zad2/src/master.c)
project(cw06z01server)
project(cw06z01client)
add_executable(cw06z01server moskala-przemyslaw/cw06/zad1/server.c)
add_executable(cw06z01client moskala-przemyslaw/cw06/zad1/client.c)